adds google fonts

--- a/src/components/Navbar.stories.mdx
+++ b/src/components/Navbar.stories.mdx
@@ -44,7 +44,7 @@ The Top Navigation Bar is used to present instant navigation to the intended pag
 
 The Mobile Navigation Bar is used to present pages in an organized fashion with minimal screen real estate.
 
-The `HamburgerIcon` is a styled component within itself, that toggles and animates the dropdown menu component on click!
+The `HamburgerIcon` is a styled component within itself, that toggles and animates the Dropdown component on click!
 
 <Preview>
   <Story name="Mobile Navbar">
