--- a/src/components/Modals.stories.mdx
+++ b/src/components/Modals.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { SignUpModal } from "./Modals";
 
-<Meta title="Design System|Modals" component={SignUpModal} />
+<Meta title="Design System/Components/Modals" component={SignUpModal} />
 
 # Modals
 
