adds finishing touches to default blockquote props

--- a/src/components/Dropdown.stories.mdx
+++ b/src/components/Dropdown.stories.mdx
@@ -4,7 +4,7 @@ import { Navbar } from "./Navbar";
 import { Dropdown } from "./Dropdown";
 import { SecondaryButton, TertiaryButton } from "./Buttons";
 
-<Meta title="Design System|Dropdown"/>
+<Meta title="Design System/Components/Dropdown"/>
 
 # Dropdown Menu
 
@@ -19,7 +19,7 @@ Use navigation bars to offer different options to the user's specific needs.
 
 The Mobile Dropdown Menu is used to substitute the `Navbar` for a friendlier mobile view. This component is used along with the `Mobile Navbar`.
 
-<Preview withToolbar>
+<Preview>
   <Story name="Mobile Dropdown Menu">
     <Dropdown showMenu={boolean("Show Menu", true)}  />
   </Story>
