--- a/src/components/Navbar.stories.mdx
+++ b/src/components/Navbar.stories.mdx
@@ -4,7 +4,7 @@ import { Navbar } from "./Navbar";
 import { HamburgerIcon } from "../assets"
 import { SecondaryButton, TertiaryButton } from "./Buttons";
 
-<Meta title="Design System|Navbar"/>
+<Meta title="Design System/Components/Navbar"/>
 
 # Navbar
 
