fixes close button position

--- a/src/components/Modals.stories.mdx
+++ b/src/components/Modals.stories.mdx
@@ -22,6 +22,10 @@ The SignUpModal is used to prompt the user to create an account
   </Story>
 </Preview>
 
+## Sign In Modal
+
+The SignInModal is used to prompt the user to sign in or create an account. This modal contains a form field for users to input data.
+
 <Story name="signIn">
   <SignInModal showModal={boolean("Show Modal", true)} />
 </Story>
