adds newline breaks to button stories, changes color to white

--- a/src/components/Buttons.stories.mdx
+++ b/src/components/Buttons.stories.mdx
@@ -9,9 +9,13 @@ import { PrimaryButton, SecondaryButton, TertiaryButton } from "./Buttons";
 
 Buttons are used to trigger actions within an application.
 
+<br/>
+
 ## Usage
 
 Buttons are used to trigger internal actions within your web applications.
+
+<br/>
 
 ## Primary Buttons
 
@@ -23,18 +27,26 @@ Primary buttons are used as a call to action and indicate the most important act
   </Story>
 </Preview>
 
+<br/>
+
 ## Secondary Buttons
 
-Primary buttons are used as a call to action and indicate the most important action on a page.
+Secondary buttons are used in this app as a ghost button. They indicate a slight difference in contrast from the primary buttons.
 
+<Preview withToolbar>
 <Story name="secondary">
   <SecondaryButton>Hello world</SecondaryButton>
 </Story>
+</Preview>
+
+<br/>
 
 ## Tertiary Buttons
 
-Primary buttons are used as a call to action and indicate the most important action on a page.
+Tertiary Buttons utilize the tertiary color of Aiden's color palette. It's used for the navigation links in the Header components.
 
-<Story name="tertiary">
-  <TertiaryButton>Hello world</TertiaryButton>
-</Story>
+<Preview withToolbar>
+  <Story name="tertiary">
+    <TertiaryButton>Hello world</TertiaryButton>
+  </Story>
+</Preview>
