--- a/src/markdown/Buttons.stories.mdx
+++ b/src/markdown/Buttons.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { action } from "@storybook/addon-actions";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
-import { PrimaryButton, SecondaryButton, TertiaryButton } from "./Buttons";
+import { PrimaryButton, SecondaryButton, TertiaryButton } from "../components/";
 
 <Meta title="Design System/Components/Buttons" component={PrimaryButton} />
 
