--- a/src/markdown/Input.stories.mdx
+++ b/src/markdown/Input.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { action } from "@storybook/addon-actions";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
-import { Input, Label, Error, Form} from "./Input";
+import { Input, Label, Error, Form} from "../components";
 
-<Meta title="Design System/Components/Form/Input" component={Input} />
+<Meta title="Design System/Components/Input" component={Input} />
 
 # Inputs
 
