--- a/src/markdown/Dropdown.stories.mdx
+++ b/src/markdown/Dropdown.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
-import { Navbar } from "./Navbar";
-import { Dropdown } from "./Dropdown";
-import { SecondaryButton, TertiaryButton } from "./Buttons";
+import { Navbar } from "../components";
+import { Dropdown } from "../components";
+import { SecondaryButton, TertiaryButton } from "../components";
 
 <Meta title="Design System/Components/Dropdown"/>
 
