--- a/src/markdown/Logos.stories.mdx
+++ b/src/markdown/Logos.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
-import { DefaultLogo, DarkLogo } from "./Logos";
+import { DefaultLogo, DarkLogo } from "../components";
 
 <Meta title="Design System/Foundation/Logo"/>
 
