--- a/src/markdown/Modals.stories.mdx
+++ b/src/markdown/Modals.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
-import { SignUpModal, SignInModal } from "./Modals";
+import { SignUpModal, SignInModal } from "../components";
 
 <Meta title="Design System/Components/Modals" component={SignUpModal} />
 
