--- a/src/markdown/Navbar.stories.mdx
+++ b/src/markdown/Navbar.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
-import { Navbar } from "./Navbar";
+import { Navbar } from "../components";
 import { HamburgerIcon } from "../assets"
-import { SecondaryButton, TertiaryButton } from "./Buttons";
+import { SecondaryButton, TertiaryButton } from "../components";
 
 <Meta title="Design System/Components/Navbar"/>
 
