:rocket: rebrands storybook

--- a/src/markdown/Colors.stories.mdx
+++ b/src/markdown/Colors.stories.mdx
@@ -4,7 +4,7 @@ import { Colors } from "./Colors";
 import image from './images/color2.png';
 import image2 from './images/color1.png';
 
-<Meta title="Design System/Foundation/Colors" component={Colors} />
+<Meta title="Foundation/Colors" component={Colors} />
 
 # The Color Themes
 
