--- a/src/markdown/Dropdown.stories.mdx
+++ b/src/markdown/Dropdown.stories.mdx
@@ -4,7 +4,7 @@ import { Navbar } from "../components";
 import { Dropdown } from "../components";
 import { SecondaryButton, TertiaryButton } from "../components";
 
-<Meta title="Design System/Components/Dropdown"/>
+<Meta title="Components/Dropdown"/>
 
 # Dropdown Menu
 
