--- a/src/markdown/Input.stories.mdx
+++ b/src/markdown/Input.stories.mdx
@@ -3,7 +3,7 @@ import { action } from "@storybook/addon-actions";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { Input, Label, Error, Form} from "../components";
 
-<Meta title="Design System/Components/Input" component={Input} />
+<Meta title="Components/Input" component={Input} />
 
 # Inputs
 
