--- a/src/markdown/Logos.stories.mdx
+++ b/src/markdown/Logos.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { DefaultLogo, DarkLogo } from "../components";
 
-<Meta title="Design System/Foundation/Logo"/>
+<Meta title="Foundation/Logo"/>
 
 # Logo
 
