--- a/src/markdown/Navbar.stories.mdx
+++ b/src/markdown/Navbar.stories.mdx
@@ -4,7 +4,7 @@ import { Navbar } from "../components";
 import { HamburgerIcon } from "../assets"
 import { SecondaryButton, TertiaryButton } from "../components";
 
-<Meta title="Design System/Components/Navbar"/>
+<Meta title="Components/Navbar"/>
 
 # Navbar
 
