--- a/src/markdown/Typography.stories.mdx
+++ b/src/markdown/Typography.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { TypeScale, DisplayScale } from "./Typography";
 
-<Meta title="Design System/Foundation/Typography" component={TypeScale} />
+<Meta title="Foundation/Typography" component={TypeScale} />
 
 # The Type System
 
