--- a/src/markdown/Buttons.stories.mdx
+++ b/src/markdown/Buttons.stories.mdx
@@ -3,7 +3,7 @@ import { action } from "@storybook/addon-actions";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { PrimaryButton, SecondaryButton, TertiaryButton } from "../components/";
 
-<Meta title="Design System/Components/Buttons" component={PrimaryButton} />
+<Meta title="Components/Buttons" component={PrimaryButton} />
 
 # Buttons
 
