--- a/src/markdown/Iconography.stories.mdx
+++ b/src/markdown/Iconography.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { Badges, SocialIcons } from "./Iconography";
 
-<Meta title="Design System/Foundation/Iconography"/>
+<Meta title="Foundation/Iconography"/>
 
 # Iconography
 
