--- a/src/markdown/Testimonial.stories.mdx
+++ b/src/markdown/Testimonial.stories.mdx
@@ -3,7 +3,7 @@ import { action } from "@storybook/addon-actions";
 import { withKnobs, boolean } from "@storybook/addon-knobs";
 import { Testimonial } from "../components";
 
-<Meta title="Design System/Components/Testimonials" component={Testimonial} />
+<Meta title="Components/Testimonials" component={Testimonial} />
 
 # Testimonials
 
